[package]
name = "cachereg"
version = "0.1.5"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Registrator for the NICOS cache."
edition = "2018"

[profile.release]
lto = true
debug = false

[dependencies]
log = "0.4.8"
systemd = "0.7.1"       # older Debian systemd
structopt = "0.3.0"
systemstat = "<=0.1.5"  # 1.41.1
dns-lookup = "=1.0.5"   # 1.41.1
mlzutil = "0.2.1"
