[package]
name = "cachereg"
version = "1.0.1"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Registrator for the NICOS cache."
edition = "2018"

[profile.release]
lto = true
debug = false

[dependencies]
log = "0.4.17"
systemd = "0.10.0"
structopt = "0.3.26"
systemstat = "0.1.11"
dns-lookup = "1.0.8"
bitflags = "1.3.2"
mlzutil = "0.2.2"
