[package]
name = "cachereg"
version = "1.0.1"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Registrator for the NICOS cache."
rust-version = "1.63"
edition = "2021"

[profile.release]
lto = true
debug = false

[dependencies]
log = "0.4.17"
systemd = "0.10.0"
structopt = "0.3.26"
systemstat = "0.2"
dns-lookup = "2.0.2"
bitflags = "2.3.2"
mlzutil = "0.3.0"
